--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shabuninil/coreui-notice.git"
+    "url": "git+https://github.com/n2ref/coreui-notice.git"
   },
   "keywords": [
     "js",
@@ -35,10 +35,10 @@
     "notice",
     "bootstrap"
   ],
-  "author": "shabuninil",
+  "author": "n2ref",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shabuninil/coreui-notice/issues"
+    "url": "https://github.com/n2ref/coreui-notice/issues"
   },
-  "homepage": "https://github.com/shabuninil/coreui-notice#readme"
+  "homepage": "https://github.com/n2ref/coreui-notice#readme"
 }
