--- a/package.json
+++ b/package.json
@@ -1,28 +1,40 @@
 {
   "name": "coreui-notice",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "CoreUI Notice",
   "scripts": {
-    "build_all": "gulp build_js && gulp build_css",
+    "build": "gulp build_tpl && gulp build_js_min && gulp build_js && gulp build_css_min && gulp build_css && npm run test_js",
 
-    "build_js": "gulp build_js",
-    "build_js_fast": "gulp build_js_fast",
+    "build_tpl": "gulp build_tpl",
+    "build_js": "gulp build_tpl && gulp build_js",
+    "build_js_min": "gulp build_tpl && gulp build_js_min",
+
     "build_css": "gulp build_css",
-    "build_css_fast": "gulp build_css_fast",
+    "build_css_min": "gulp build_css_min",
 
     "build_watch": "gulp build_watch",
-    "text_js": "eslint -c .eslintrc.json --max-warnings 100 --ext .js ./src/js"
+    "test_js": "eslint -c .eslintrc.json --max-warnings 100 --ext .js ./dist"
   },
   "dependencies": {
-    "@material/snackbar": "14.*"
+    "ejs": "3.1.10"
   },
   "devDependencies": {
-    "gulp": "4.*",
-    "gulp-concat": "2.*",
-    "gulp-sourcemaps": "3.*",
-    "gulp-uglify": "3.0.*",
-    "gulp-clean-css": "4.*",
-    "eslint": "8.38.0"
+    "gulp": "5.0.0",
+    "gulp-concat": "2.6.1",
+    "gulp-sourcemaps": "3.0.0",
+    "gulp-uglify": "3.0.2",
+    "gulp-sass": "5.1.0",
+    "gulp-wrap-file": "0.1.2",
+    "gulp-html-to-js": "0.0.7",
+    "@rollup/stream": "3.0.1",
+    "rollup-plugin-sourcemaps": "0.6.3",
+    "@rollup/plugin-babel": "6.0.4",
+    "vinyl-source-stream": "2.0.0",
+    "vinyl-buffer": "1.0.1",
+    "sass": "1.76.0",
+    "eslint": "8.57.0",
+    "@babel/plugin-transform-template-literals": "7.24.1",
+    "@babel/preset-env": "7.24.5"
   },
   "repository": {
     "type": "git",
