--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rollup/stream": "3.0.1",
     "rollup-plugin-sourcemaps": "0.6.3",
     "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-node-resolve": "15.2.3",
     "vinyl-source-stream": "2.0.0",
     "vinyl-buffer": "1.0.1",
     "sass": "1.76.0",
